--- a/app/views/author/posts/index.slim
+++ b/app/views/author/posts/index.slim
@@ -4,6 +4,7 @@ table.table.table-responsive-sm.table-hover.table-outline.mb-0
       th.text-center #ID
       th Category
       th Headline
+      th Tags
       th.text-center View
       th.text-center Show
       th.text-center Edit
