--- a/app/views/author/posts/_post_form.slim
+++ b/app/views/author/posts/_post_form.slim
@@ -11,14 +11,17 @@
           = f.label :category_id, "Category"
           = f.select :category_id, @category_options, {}, class: "form-control"
           br
-          = f.label :title, "Title"
-          = f.text_field :title, class: "form-control"
-          br
           = f.label :image
           = f.file_field :image
           br
+          = f.label :title, "Title"
+          = f.text_field :title, class: "form-control"
+          br
           = f.label :header, "Header"
           = f.text_area :header, class: "form-control"
+          br
+          = f.label :tag_list
+          = f.text_field :tag_list, class: "form-control"
           br
           = f.label :content_new, "Content"
           = f.text_area :content_new, class: "ckeditor"
