--- a/app/views/author/posts/_posts.slim
+++ b/app/views/author/posts/_posts.slim
@@ -1,18 +1,19 @@
-tr
-  td.text-center
-    = post.id
-  td
-    = post.category.name
-  td
-    = post.title
-  td
-    - post.tag_list.each do |tag|
-      | &ensp;&#35;
-      = link_to tag, tag
-  td.text-centers
-    | ...
-  td.text-center
-    i.fas.fa-info-circle
-  td.text-center
-    = link_to edit_author_post_path post
-      i.far.fa-edit
+- @posts.each do |post|
+  tr
+    td.text-center
+      = post.id
+    td
+      = post.category.name
+    td
+      = post.title
+    td
+      - post.tag_list.each do |tag|
+        | &ensp;&#35;
+        = link_to tag, author_tag_path(tag)
+    td.text-center
+      | ...
+    td.text-center
+      i.fas.fa-info-circle
+    td.text-center
+      = link_to edit_author_post_path post
+        i.far.fa-edit
