--- a/app/views/static_pages/_tags.slim
+++ b/app/views/static_pages/_tags.slim
@@ -1,21 +1,7 @@
 .aside-widget
   .tags-widget
     ul
-      li
-        a href="#"  Chrome
-      li
-        a href="#"  CSS
-      li
-        a href="#"  Tutorial
-      li
-        a href="#"  Backend
-      li
-        a href="#"  JQuery
-      li
-        a href="#"  Design
-      li
-        a href="#"  Development
-      li
-        a href="#"  JavaScript
-      li
-        a href="#"  Website
+      - tags.each do |tag|
+        - if tag.taggings_count > 0
+          li
+            = link_to tag.name, tag_path(tag.name)
