--- a/app/views/static_pages/index.slim
+++ b/app/views/static_pages/index.slim
@@ -41,4 +41,4 @@
         = render "featured_posts"
         = render "advertisement"
         = render "categories"
-        = render "tags"
+        = render "tags", tags: @tags
