--- a/app/views/author/posts/_post_form.slim
+++ b/app/views/author/posts/_post_form.slim
@@ -14,6 +14,9 @@
           = f.label :image
           = f.file_field :image
           br
+          = f.label :video
+          = f.file_field :video, accept: "video/mp4, video/avi, video/mov, fvideo/flv, video/wmv"
+          br
           = f.label :title, "Title"
           = f.text_field :title, class: "form-control"
           br
