--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -6,16 +6,12 @@ body
           .nav-logo
             = link_to root_path, class: "logo" do
               - image_tag "news.png", alt: ""
-          ul.nav-menu.nav.navbar-nav
-            li
-              a href="category.html"  News
-            li
-              a href="category.html"  Popular
+          ul.nav-menu.nav.navbar-nav style="margin-left: 15px;"
             = render partial: "shared/category", collection: categories_list, as: :category
           .nav-btns
             = render "posts/form_posts_search"
             - if user_signed_in?
-              ul.nav.navbar-nav.ml-auto style=("margin-top: -35px; margin-right: 5px; float: right")
+              ul.nav.navbar-nav.ml-auto style=("margin-top: -30px; margin-right: 5px; float: right")
                 li.nav-item.dropdown
                   .dropdown style="float: right;"
                     button.dropbtn
