--- a/app/views/static_pages/_small_posts.slim
+++ b/app/views/static_pages/_small_posts.slim
@@ -4,4 +4,7 @@
       - image_tag(post.image.url, alt: "")
     .post-body
       h3.post-title
-        = link_to post.title, post_path(post)
+      = link_to post.title, post_path(post)
+      - if post.video.present?
+        | &ensp;
+        i.fas.fa-video
