--- a/app/views/admin/posts/_posts.slim
+++ b/app/views/admin/posts/_posts.slim
@@ -6,7 +6,7 @@ tr
   td
     = post.title
   td.text-center
-    | ...
+    = post.impressionist_count
   td.text-center
     = link_to admin_post_path post
       i.fas.fa-info-circle
