--- a/app/views/author/posts/_posts.slim
+++ b/app/views/author/posts/_posts.slim
@@ -10,7 +10,7 @@ tr
       | &ensp;&#35;
       = link_to tag, author_tag_path(tag)
   td.text-center
-    | ...
+    = post.impressionist_count
   td.text-center
     i.fas.fa-info-circle
   td.text-center
