--- a/app/views/posts/_post_like.slim
+++ b/app/views/posts/_post_like.slim
@@ -2,3 +2,7 @@
 i.fas.fa-thumbs-up style="color: #e62e00;"
 | &ensp; #{ post.reactions.dislike.size } 
 i.fas.fa-thumbs-down style="color: #3d3d5c;"
+- if post.impressionist_count > 1
+  | &ensp; #{ post.impressionist_count } views
+- else
+  | &ensp; #{ post.impressionist_count } view
