--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -7,13 +7,13 @@
       -else
         h2.text-center Search results
         h4
-          | There are #{@post_results.total_count} posts were found
+          |#{@post_results.total_count} posts were found
         br/
         - @post_results.each do |post|
-            .col-md-4#recent-post
+            .col-md-3.col-sm-4#recent-post
               .post
                 = link_to post_path(post), class: "post-img" do
-                  - image_tag(post.image.url, alt: "")
+                  = image_tag(post.image.url, alt: "")
                 .post-body
                   .post-meta
                     = link_to post_path(post), class: "post-category cat-#{post.category.id}" do
@@ -21,7 +21,6 @@
                     span.post-date
                       = post.updated_at.strftime("%b %d, %Y")
                   h3.post-title
-                    = link_to truncate(post.title, length: 55), post_path(post)
-      .center style=("margin: 0 auto; width: 50%")
-        = paginate @post_results, theme: "twitter-bootstrap-3"
-      = render "shared/footer"
+                    = link_to truncate(post.title), post_path(post)
+    .clearfix.visible-md.visible-lg
+    = paginate @post_results, theme: "twitter-bootstrap-3"
