--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -21,7 +21,7 @@
             .post-meta
             - if @post.video.present?
               = video_tag @post.video_url.to_s, controls: true
-            = raw @post.content_new
+            = raw @post.content
             br
             .aside-widget
               .tags-widget
@@ -35,6 +35,6 @@
         #comment-list
           = render "posts/comments", post: @post, comments: @comments
       .col-md-4
-        = render "static_pages/featured_posts"
+        = render "static_pages/featured_posts", post_1: @featured_post_1, post_2: @featured_post_2
         = render "static_pages/categories"
-        = render "static_pages/tags"
+        = render "static_pages/tags", tags: @tags
