--- a/app/views/static_pages/_big_post.slim
+++ b/app/views/static_pages/_big_post.slim
@@ -1,7 +1,7 @@
 .col-md-6#big-post
   .post
     = link_to post_path(post), class: "post-img" do
-      - image_tag(post.image.url, alt: "")
+      = image_tag(post.image.url, alt: "")
     .post-body
       .post-meta
         = link_to post.category.name, category_path(post.category), class: "post-category cat-#{post.category.id}"
