--- a/app/views/static_pages/_featured_posts.slim
+++ b/app/views/static_pages/_featured_posts.slim
@@ -2,20 +2,28 @@
   .section-title
     h4 Featured Posts
   .post.post-thumb
-    = link_to "#", class: "post-img" do
-      = image_tag("post-1.jpg", alt: "")
+    = link_to post_path(post_1), class: "post-img" do
+      = image_tag(post_1.image.url, alt: "")
     .post-body
       .post-meta
-        a.post-category.cat-3 href="category.html"  Jquery
-        span.post-date March 27, 2018
+        = link_to category_path(post_1.category), class: "post-category cat-#{post_1.category.id}" do
+          = post_1.category.name
+        span.post-date
+          = post_1.updated_at.strftime("%b %d, %Y ")
+          - if post_1.video.present?
+            i.fas.fa-video
       h3.post-title
-        a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
+        = link_to post_1.title, post_path(post_1)
   .post.post-thumb
-    = link_to "#", class: "post-img" do
-      = image_tag("post-1.jpg", alt: "")
+    = link_to post_path(post_2), class: "post-img" do
+      = image_tag(post_2.image.url, alt: "")
     .post-body
       .post-meta
-        a.post-category.cat-2 href="category.html"  JavaScript
-        span.post-date March 27, 2018
+        = link_to category_path(post_2.category), class: "post-category cat-#{post_2.category.id}" do
+          = post_2.category.name
+        span.post-date
+          = post_2.updated_at.strftime("%b %d, %Y ")
+          - if post_2.video.present?
+            i.fas.fa-video
       h3.post-title
-        a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
+        = link_to post_2.title, post_path(post_2)
