--- a/app/views/static_pages/_most_read.slim
+++ b/app/views/static_pages/_most_read.slim
@@ -1,6 +1,18 @@
 .post.post-widget
-  = link_to post_path(post), class: "post-img" do
-    - image_tag(post.image.url, alt: "")
+  = link_to post_path(@most_read_1), class: "post-img" do
+    = image_tag(@most_read_1.image.url, alt: "")
   .post-body
     h3.post-title
-      = link_to post.title, post_path(post)
+      = link_to @most_read_1.title, post_path(@most_read_1)
+.post.post-widget
+  = link_to post_path(@most_read_2), class: "post-img" do
+    = image_tag(@most_read_2.image.url, alt: "")
+  .post-body
+    h3.post-title
+      = link_to @most_read_2.title, post_path(@most_read_2)
+.post.post-widget
+  = link_to post_path(@most_read_2), class: "post-img" do
+    = image_tag(@most_read_2.image.url, alt: "")
+  .post-body
+    h3.post-title
+      = link_to @most_read_2.title, post_path(@most_read_2)
