--- a/app/views/static_pages/_recent_posts.slim
+++ b/app/views/static_pages/_recent_posts.slim
@@ -1,7 +1,7 @@
 .col-md-3#recent-post
   .post
     = link_to post_path(post), class: "post-img" do
-      - image_tag(post.image.url, alt: "")
+      = image_tag(post.image.url, alt: "")
     .post-body
       .post-meta
         = link_to category_path(post.category), class: "post-category cat-#{post.category.id}" do
