--- a/app/views/tags/show.slim
+++ b/app/views/tags/show.slim
@@ -8,10 +8,10 @@
               li
                 = link_to params[:id], tag_path(params[:id])
       - @posts.each do |post|
-        .col-md-4
+        .col-md-3#recent-post
           .post
             = link_to post_path(post), class: "post-img" do
-              - image_tag(post.image.url, alt: "", style:("width: 350px; height: 220px;"))
+              = image_tag(post.image.url, alt: "")
             .post-body
               .post-meta
                 = link_to category_path(post.category), class: "post-category cat-#{post.category.id}" do
