Task175 : Load more

--- a/app/views/categories/_post.slim
+++ b/app/views/categories/_post.slim
@@ -1,4 +1,4 @@
-.post.post-row#recent-post style="margin-bottom: 20px;"
+.post.post-row style="margin-bottom: 20px;"
   = link_to post_path(post), class: "post-img" do
     = image_tag(post.image.url, alt: "")
   .post-body
