--- a/app/views/author/posts/index.slim
+++ b/app/views/author/posts/index.slim
@@ -10,3 +10,5 @@ table.table.table-responsive-sm.table-hover.table-outline.mb-0
       th.text-center Edit
   tbody
   = render partial: "posts", collection: @posts, as: :post
+.center style=("text-align: center;")
+  = paginate @posts, theme: "twitter-bootstrap-3"
