--- a/app/views/categories/show.slim
+++ b/app/views/categories/show.slim
@@ -39,15 +39,14 @@
                     = @posts[2].updated_at.strftime("%b %d, %Y")
                 h4.post-title
                   = link_to @posts[2].title, post_path(@posts[2])
-          .clearfix.visible-md.visible-lg
-          .col-md-12
-            .section-row
-              = link_to "#", style: "display: inline-block;margin: auto;" do
-                - image_tag "ad-2.jpg", class: "img-responsive"
-          .col-md-12
+          .col-md-12#recent-post
             = render partial: "post", collection: @posts[3..@posts.size], as: :post
+          .col-md-12
+            .section-row style= ("margin-left: 105px; margin-top: 20px;")
+                = link_to "LOAD MORE", category_path(@category, page: @posts.current_page+1), id: "load-more-posts", remote: true
       .col-md-4
         = render "static_pages/advertisement"
+        h3 Most read
         = render partial: "static_pages/most_read"
         = render "static_pages/featured_posts", post_1: @featured_post_1, post_2: @featured_post_2
         = render "static_pages/categories"
