--- a/app/views/posts/_comments.slim
+++ b/app/views/posts/_comments.slim
@@ -12,6 +12,6 @@
     h4 Leave a reply
     = render "posts/form", post: post
   - else
-    p
+    p.text-center
       = link_to "Sign in", user_session_path
       |  for more feature
