--- a/app/views/static_pages/_most_read.slim
+++ b/app/views/static_pages/_most_read.slim
@@ -16,3 +16,15 @@
   .post-body
     h3.post-title
       = link_to @most_read_2.title, post_path(@most_read_2)
+.post.post-widget
+  = link_to post_path(@most_read_3), class: "post-img" do
+    = image_tag(@most_read_3.image.url, alt: "")
+  .post-body
+    h3.post-title
+      = link_to @most_read_3.title, post_path(@most_read_3)
+.post.post-widget
+  = link_to post_path(@most_read_4), class: "post-img" do
+    = image_tag(@most_read_4.image.url, alt: "")
+  .post-body
+    h3.post-title
+      = link_to @most_read_4.title, post_path(@most_read_4)
