--- a/app/views/tags/show.slim
+++ b/app/views/tags/show.slim
@@ -1,26 +1,24 @@
-.session
+.section
   .container
-    .row style="margin-top: 30px;"
-      .section-title style="padding-left: 15px;"
-        .aside-widget
-          .tags-widget
-            .tag style= "width: 50px; float: left; margin-top: -4px;"
-              h4
-                | Tag :
-            .tags
-              ul style="margin-left: 50px;"
-                li
-                  = link_to params[:id], tag_path(params[:id])
-      - @posts.each do |post|
-        .col-md-3#recent-post
-          .post
-            = link_to post_path(post), class: "post-img" do
-              = image_tag(post.image.url, alt: "")
-            .post-body
-              .post-meta
-                = link_to category_path(post.category), class: "post-category cat-#{post.category.id}" do
-                  = post.category.name
-                span.post-date
-                  = post.updated_at.strftime("%b %d, %Y")
-              h3.post-title
-                = link_to truncate(post.title, length: 50), post_path(post)
+    .row
+      .col-md-8
+        .section-title style="padding-left: 15px;"
+          .aside-widget
+            .tags-widget
+              .tag style= "width: 50px; float: left; margin-top: -4px;"
+                h4
+                  | Tag :
+              .tags
+                ul style="margin-left: 50px;"
+                  li
+                    = link_to params[:id], tag_path(params[:id])
+          = render partial: "post", collection: @posts[0..@posts.size], as: :post
+        .center style=("text-align: center; width: 50%")
+          = paginate @posts, theme: "twitter-bootstrap-3"
+      .col-md-4
+        = render "static_pages/advertisement"
+        h3 Most read
+        = render partial: "static_pages/most_read"
+        = render "static_pages/featured_posts", post_1: @featured_post_1, post_2: @featured_post_2
+        = render "static_pages/categories"
+        = render "static_pages/tags", tags: @tags
